# GPT-Realtime-Agent-Long-Conversation

./: .env.example  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
original/: realtime_agent_cli.py
realtime_voicebot/: __init__.py  app.py  cli.py  config.py  errors.py  logging.py  metrics.py  redaction.py
realtime_voicebot/audio/: __init__.py  input.py  output.py
realtime_voicebot/handlers/: __init__.py  core.py  dispatcher.py  tools.py
realtime_voicebot/state/: __init__.py  conversation.py  memory.py
realtime_voicebot/summarization/: __init__.py  base.py  openai_impl.py
realtime_voicebot/transport/: __init__.py  client.py  events.py
tests/: test_audio.py  test_audio_player.py  test_barge_in.py  test_cli.py  test_dispatcher.py  test_logging_metrics.py  test_provider.py  test_redaction.py  test_state.py  test_summarization.py  test_tools.py  test_transport.py
tests/fakes/: fake_realtime_server.py
