[project]
name = "gpt-realtime-agent-long-conversation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6.1",
]

[project.scripts]
voicebot = "realtime_voicebot.app:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["**/.venv", "**/venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP", "I", "PIE", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["realtime_voicebot"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
