[project]
name = "gpt-realtime-agent-long-conversation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6.1",
  "pydantic-settings>=2.3.0",
  "sounddevice>=0.4.6",
  "websockets>=11.0",
  "typer>=0.12",
  "openai>=1.40.0",
]

[project.scripts]
voicebot = "realtime_voicebot.cli:app"

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.8",
  "pre-commit>=3.6",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["**/.venv", "**/venv", "build", "dist", "original"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP", "I", "PIE", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"original/**" = ["ALL"]
"tests/**" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["realtime_voicebot"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

# Packaging: restrict discovery to our package and avoid including 'original' scripts.
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["realtime_voicebot*"]
exclude = ["original*", "tests*", "examples*"]
